# iphone_photo_download

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  app.cpp  app.h  context.cpp  context.h  gphoto_camera.h  main.cpp  ptp.cpp  ptp.h  usb_context.cpp  usb_context.h  usb_device.cpp  usb_device.h  usb_device_list.cpp  usb_device_list.h
cmake/: FindGphoto2.cmake  FindLibMTP.cmake
src/: CMakeLists.txt  app.cpp  app.h  command.cpp  command.h  context.cpp  context.h  download_command.cpp  download_command.h  folder_pair.h  gphoto_camera.cpp  gphoto_camera.h  gphoto_info.cpp  gphoto_info.h  list_devices_command.cpp  list_devices_command.h  list_files_command.cpp  list_files_command.h  main.cpp
test/: CMakeLists.txt  simple.cpp
